# cognologos-auth-service

./: .env.example  Makefile  pyproject.toml
auth_service/: main.py
auth_service/core/: config.py  security.py
auth_service/core/dependencies/: constructors.py  fastapi.py
auth_service/core/exceptions/: user.py
auth_service/lib/db/: auth.py  user.py
auth_service/lib/models/: auth_session.py
auth_service/lib/schemas/: token.py  user.py
auth_service/routers/v1/: auth.py  router.py  user.py
deployment/: docker-compose.yml
migrations/versions/: 2024_12_12_1113-dba4166dbc94.py
